update the range

--- a/templates/about.html
+++ b/templates/about.html
@@ -7,6 +7,6 @@
     <div>
         <h1 class="pb-4">About AutoStruct</h1>
 
-        <p class="pb-3">AutoStruct is a online web application for the elucidation of dry protein samples. The tool was developed by the Bioinspired Materials Laboratory at the University of Michigan run by Dr. Abdon Pena-Francesch. For inquiries about AutoStruct please refer to the the publication or contact the Bioinspired Materials Lab.</p>
+        <p class="pb-3">AutoStruct is a online web application for the elucidation of dry protein samples. The tool was developed by the Bioinspired Materials Laboratory at the University of Michigan run by Dr. Abdon Pena-Francesch. For inquiries about AutoStruct's specific methods please refer to our technical paper.</p>
     </div>
 {% endblock %}
